--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,10 @@
 <body>
     <script>
         function add_items(){
-            window.location.href = "add_records.php";
+            window.location.href = "add_records.html";
         }
         function summary(){
-            window.location.href = "summary.php";
+            window.location.href = "summary.html";
         }
     </script>
     <div class="container">
