--- a/src/summary.html
+++ b/src/summary.html
@@ -2,8 +2,9 @@
 <head>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/summary.css">
-    <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <meta charset="utf-8">
+    <script src='../3rd-party/chart.js'></script>
+    <!-- <script defer src='./3rd-party/jquery.min.js'></script> -->
     <script>
         function return_home(){
             window.location.href = "index.html";
