types are dynamically rendered to add screen (from db)

--- a/src/add_records.html
+++ b/src/add_records.html
@@ -7,6 +7,7 @@
             window.location.href = "index.html";
         }
     </script>
+    <script defer src="scripts/add_records.js"></script>
 </head>
 <body>
     <button class="back button" onclick="return_home()">home page</button>
@@ -15,7 +16,7 @@
         <form class="form" method="POST">
             <!-- <label for="Type">Type</label><br/> -->
             <select id="Type" name="Type">
-                <option value="0">select type</option>
+                <!-- <option value="0">select type</option>
                 <option value="13">car</option>
                 <option value="1">alcohol</option>
                 <option value="2">detergents</option>
@@ -28,7 +29,7 @@
                 <option value="9">installment</option>
                 <option value="11">subscription</option>
                 <option value="12">e-cig</option>
-                <option value="10">income</option>
+                <option value="10">income</option> -->
             </select><br/>
             <!-- <label for="Desc">description</label><br/> -->
             <input type="text" name="Desc" placeholder="description" autocomplete="off"><br/>
