--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
         function summary(){
             window.location.href = "summary.html";
         }
+        function edit_items(){
+            window.location.href = "edit.html";
+        }
         const electron = require("electron");
         const ipc = electron.ipcRenderer;
         document.addEventListener("DOMContentLoaded", function() {
@@ -20,18 +23,14 @@
             });
         });
     </script>
-    <div class="container">
-        <h1 class="header">Financial tracker</h1>
-        <div class="button-container">
-            <div class="item">
-                <button class="button button1" onclick="add_items()">Add items</button>
-            </div>
-            <div class="item">
-                <button class="button button2" onclick="summary()">Summary</button>
-            </div>
-            <div class="item">
-                <button class="button button3" onclick="edit_items()">Edit items</button>
-            </div>
+    <div class="grid-container">
+        <div class="header standout"><h1>Financial tracker</h1></div>
+        <button class="button settings standout" onclick="settings()"><img src="icons/100/icons8-support.svg"></button>
+        <div class="buttons-container">
+            <button class="button button1 standout" onclick="add_items()">Add items</button>
+            <button class="button button2 standout" onclick="summary()">Summary</button>
+            <button class="button button3 standout" onclick="edit_items()">Edit items</button>
         </div>
+        <div class="footer standout"><h1>financial tracker v1.0.4-beta by Jakub Górski [THIS IS A PREPRODUCTION VERSION. END PRODUCT SUBJECT TO CHANGES]</h1></div>
     </div>
 </body>
