--- a/src/add_records.html
+++ b/src/add_records.html
@@ -6,6 +6,9 @@
         function return_home(){
             window.location.href = "index.html";
         }
+        function foo(){
+            console.log("add");
+        }
     </script>
     <script defer src="scripts/add_records.js"></script>
 </head>
@@ -14,6 +17,7 @@
         <button class="home button standout" onclick="return_home()"><img src="icons/100/icons8-home-page-100.png"></button>
         <div class="standout header"><h1>Add an item</h1></div>
         <form name="data" class="form" method="POST">
+            <div id="add-type" class="button standout" onclick="foo()"><img src="icons/100/icons8-add-100.png"></div>
             <select id="Type" name="type"></select>
             <input id="desc" type="text" name="desc" placeholder="description" autocomplete="off">
             <input id="amnt" type="number" name="amnt" step="0.01" min="0" placeholder="amount" autocomplete="off">
@@ -21,6 +25,7 @@
             <input id="submit" type="submit" value="add">
         </form>
         <div class="footer standout"><h1>financial tracker v1.0.4-beta by Jakub Górski [THIS IS A PREPRODUCTION VERSION. END PRODUCT SUBJECT TO CHANGES]</h1></div>
+        <div id="info" class="standout"><span id="info-text"></span></div>
     </div>
 
 </body>
