--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
         });
     </script>
     <div class="grid-container">
+        <button class="close button standout" onclick="close()"><img src="icons/100/icons8-close-100.png"></button>
         <div class="header standout"><h1>Financial tracker</h1></div>
         <button class="button settings standout" onclick="settings()"><img src="icons/100/icons8-support.svg"></button>
         <div class="buttons-container">
@@ -31,6 +32,6 @@
             <button class="button button2 standout" onclick="summary()">Summary</button>
             <button class="button button3 standout" onclick="edit_items()">Edit items</button>
         </div>
-        <div class="footer standout"><h1>financial tracker v1.0.4-beta by Jakub Górski [THIS IS A PREPRODUCTION VERSION. END PRODUCT SUBJECT TO CHANGES]</h1></div>
+        <div class="footer standout"><h1 class="left">icons by <a href="https://icons8.com/" target="_blank">icons8</a></h1><h1 class="right">financial tracker v1.0.4-beta by Jakub Górski [THIS IS A PREPRODUCTION VERSION. END PRODUCT SUBJECT TO CHANGES]</h1></div>
     </div>
 </body>
