--- a/src/summary.html
+++ b/src/summary.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="grid-container">
-        <button class="home button standout" onclick="return_home()"><img src="icons/100/icons8-home-page-100.png"></button>
+        <button class="home button standout" onclick="return_home()"><img src="icons/100/icons8-back-arrow-100.png"></button>
         <div class="standout header"><h1>summary</h1></div>
         <div class="charts-container" id="charts-container">
             <div id="monthly-expenses-container" class="standout chart">
@@ -40,6 +40,5 @@
                 <canvas id="chart3"></canvas>
             </div>
         </div>
-        <div class="footer standout"><h1>financial tracker v1.0.4-beta by Jakub Górski [THIS IS A PREPRODUCTION VERSION. END PRODUCT SUBJECT TO CHANGES]</h1></div>
-    </div>
+        <div class="footer standout"><h1 class="left">icons by <a href="https://icons8.com/" target="_blank">icons8</a></h1><h1 class="right">financial tracker v1.0.4-beta by Jakub Górski [THIS IS A PREPRODUCTION VERSION. END PRODUCT SUBJECT TO CHANGES]</h1></div>    </div>
 </body>
