--- a/src/edit.html
+++ b/src/edit.html
@@ -11,7 +11,7 @@
     </script>
     <script defer src="scripts/edit.js"></script>
     <div class="grid-container">
-        <button class="home button standout" onclick="return_home()"><img src="icons/100/icons8-home-page-100.png"></button>
+        <button class="home button standout" onclick="return_home()"><img src="icons/100/icons8-back-arrow-100.png"></button>
         <div class="standout header"><h1>Edit items</h1></div>
         <div class="picker standout" id="picker">
             <div class="button-container" id="button-container">
@@ -24,8 +24,7 @@
             <table id="records">
             </table>
         </div>
-        <div class="footer standout"><h1>financial tracker v1.0.4-beta by Jakub Górski [THIS IS A PREPRODUCTION VERSION. END PRODUCT SUBJECT TO CHANGES]</h1></div>
-    </div>
+        <div class="footer standout"><h1 class="left">icons by <a href="https://icons8.com/" target="_blank">icons8</a></h1><h1 class="right">financial tracker v1.0.4-beta by Jakub Górski [THIS IS A PREPRODUCTION VERSION. END PRODUCT SUBJECT TO CHANGES]</h1></div>    </div>
     <script>
         var button_container = document.getElementById("button-container");
         var buttons = button_container.getElementsByClassName("picker-item");
