--- a/src/edit.html
+++ b/src/edit.html
@@ -21,10 +21,12 @@
             </div>
         </div>
         <div id="table" class="table-container standout">
+            <h1 style="padding: 2rem;">This page is currently under construction. You will be able to view and manage your expenses, types and incomes.</h1>
             <table id="records">
             </table>
         </div>
-        <div class="footer standout"><h1 class="left">icons by <a href="https://icons8.com/" target="_blank">icons8</a></h1><h1 class="right">financial tracker v1.0.4-beta by Jakub Górski [THIS IS A PREPRODUCTION VERSION. END PRODUCT SUBJECT TO CHANGES]</h1></div>    </div>
+        <div class="footer standout"><h1 class="left">icons by <a href="https://icons8.com/" target="_blank">icons8</a></h1><h1 class="right">financial tracker v1.0.4-beta by Jakub Górski [THIS IS A PREPRODUCTION VERSION. END PRODUCT SUBJECT TO CHANGES]</h1></div>
+    </div>
     <script>
         var button_container = document.getElementById("button-container");
         var buttons = button_container.getElementsByClassName("picker-item");
